added allowed origins; turned on security